--- a/flatiron-job/flatiron-job-talk-oct-2019.tex
+++ b/flatiron-job/flatiron-job-talk-oct-2019.tex
@@ -1178,7 +1178,7 @@ disease modeling; crowdsourced machine learning
 \item similar performance to Stan
 \item adds stats functions to TensorFlow
 \begin{subitemize}
-\item catching up to Stan with growing staffing
+\item catching up to Stan functionality with growing staffing
 \end{subitemize}
 \item adds inference algorithms on top
 \begin{subitemize}
